# brasileira

./: .bashrc  .gitignore  .profile  AUDITORIA_CONTEXTO_V2.md  V2_MASTER_PLAN_SUMMARY.md  agendador_mestre.sh  agendador_scrapers.sh  agente_newspaper.py  agente_revisor.py  alerta_notificacao.py  aplicar_homepage.py  atualizar_menu.py  atualizar_menu_items.py  catalogo_fontes.py  catalogo_gov.py  catalogo_midia.py  catalogo_nicho.py  catalogo_scrapers.py  config_categorias.py  config_geral.py  configurar_adsense.py  construir_knowledge_base.py  context-engineering-brasileira-news.md  controle_auditoria.json  corrigir_acentos.py  corrigir_demo_restante.py  corrigir_posts_existentes.py  curador_imagens_unificado.py  deduplicador_unificado.py  extrator_conteudo.py  find_english_text.py  fix_all_remaining.py  fix_theme_settings.py  garantia_imagens.py  gerar_backup_codigos.sh  gestor_budget.py  gestor_cache.py  gestor_imagens.py  gestor_wp.py  injetar_adsense_decoder.py  (+18 more)
versao3/: .env.example  README.md  docker-compose.yml  pyproject.toml
versao3/migrations/: 001_initial_schema.sql  002_kafka_topics_reference.sql
versao3/scripts/: apply_migrations.py  init_kafka.py
versao3/src/newsroom_v3/classification/: classifier.py
versao3/src/newsroom_v3/config/: settings.py
versao3/src/newsroom_v3/ingestion/: deduplicator.py  rss_collector.py  scraper_collector.py  worker_pool.py
versao3/src/newsroom_v3/integrations/: kafka_client.py  postgres_client.py  redis_client.py  wordpress_client.py
versao3/tests/: test_deduplicator.py  test_smart_router.py  test_tier_config.py
(+324 files in other folders)
